# phidgets_daq

./: CMakeLists.txt  package.xml
demo/: example.launch  example2.launch  phidgets_daq_interpreter_functions.py  save_bag_example_config.py
msg/: phidgetsDAQalldata.msg  phidgetsDAQinterpreted.msg  phidgetsDAQmsg.msg  phidgetsDigitalOutput.msg
nodes/: command_line_code.txt  daq.py  daq_interpreter.py  liveplot.py  phidgets_interface_ssr.py  save_daq_data_to_csv.py  save_daq_data_to_csv_continuous.py  ssr_OFF.py  ssr_publisher.py  ssr_publisher_localtimes.py  ssr_publisher_localtimes_more_control.py  ssr_pulse_control.py
rules/: 99-phidgets-interfacekit.rules
srv/: phidgetsDAQchannelnames.srv  phidgetsDAQservice.srv  phidgetsDAQservice_alldata.srv
