<?xml version="1.0"?>
<package>
  <name>phidgets_daq</name>
  <version>0.0.0</version>
  <description>A simple ros package to turn a phidgets interface kit (tested with 8/8/8) into a data acquisition board. 1 kHz data rate for 4 channels, 500 Hz for all 8. Data is published in batches, and delayed approximately 8 ms. Time stamps associated with the data are corrected, continuous, and synchronized to within 1 sample interval.</description>

  <maintainer email="florisvb@gmail.com">Floris van Breugel</maintainer>

  <license>MIT</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
